feat: add google tag

--- a/app/themes/hugo-PaperMod/layouts/_default/baseof.html
+++ b/app/themes/hugo-PaperMod/layouts/_default/baseof.html
@@ -6,6 +6,15 @@
 <html lang="{{ site.Language }}" dir="{{ .Language.LanguageDirection | default "auto" }}">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CT04PJHQ9E"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-CT04PJHQ9E');
+    </script>
     {{- partial "head.html" . }}
 </head>
 
