--- a/app/themes/hugo-PaperMod/layouts/_default/single.html
+++ b/app/themes/hugo-PaperMod/layouts/_default/single.html
@@ -43,7 +43,7 @@
     <hr>
 
     <div style="text-align: center;">Support this project
-      by giving a star on <a href="https://github.com/albertoursino/singularity-notes">GitHub!</a> ⭐</div>
+      by giving a star on <a href="https://github.com/albertoursino/singularity-notes">GitHub</a>! ⭐</div>
   </div>
   {{- end }}
 
