--- a/app/themes/hugo-PaperMod/layouts/partials/home_info.html
+++ b/app/themes/hugo-PaperMod/layouts/partials/home_info.html
@@ -5,7 +5,7 @@
   </header>
   <div class="entry-content">
     {{ .Content | markdownify }} Contribute on
-    <a href="https://github.com/albertoursino/singularity-notes">GitHub!</a>
+    <a href="https://github.com/albertoursino/singularity-notes">GitHub</a>! 🤝
   </div>
   <!-- <footer class="entry-footer">
         {{ partial "social_icons.html" (dict "align" site.Params.homeInfoParams.AlignSocialIconsTo) }}
